--- a/gallery.css
+++ b/gallery.css
@@ -1,6 +1,7 @@
 body {
-  background-color: black;
+  background-color: white;
 }
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -9,6 +10,7 @@ ul {
     background-color: #f1f1f1;
     height:100%;
     position:fixed;
+    font-family: 'Tinos', serif;
 }
 
 li a {
