--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  font-family: 'Tinos', serif;
+}
+h1 {
+  
 }
 ul {
     list-style-type: none;
@@ -16,7 +20,7 @@ ul {
     width: 200px;
     background-color: rgb(200, 217, 219);
     height:100%;
-    position:fixed;
+    float:right;
 }
 
 li a {
@@ -30,3 +34,7 @@ li a:hover {
     background-color: #555;
     color: white;
 }
+/*#name > div {
+  margin 0 auto;
+  width:250px;
+}*/
