--- a/style.css
+++ b/style.css
@@ -10,8 +10,10 @@ html {
   background-size: cover;
   font-family: 'Tinos', serif;
 }
-h1 {
-  
+#name >p {
+  font-size: 65px;
+  font-weight: bold;
+  text-align:center;
 }
 ul {
     list-style-type: none;
@@ -20,7 +22,7 @@ ul {
     width: 200px;
     background-color: rgb(200, 217, 219);
     height:100%;
-    float:right;
+    position:fixed;
 }
 
 li a {
