--- a/style.css
+++ b/style.css
@@ -91,6 +91,8 @@ p {
 .sarah {
   padding-right: 80px;
   padding-left: 50px;
+  font-size: 20px;
+  line-height: 28px;
 }
 #columnContainer {
   float: left;
